--- a/leeyerin1/scss/m_main.scss
+++ b/leeyerin1/scss/m_main.scss
@@ -382,6 +382,7 @@ span.text-indent {
 
 //section01
 #section01 {
+  display: none;
   position: relative;
   overflow: hidden;
   box-sizing: border-box;
@@ -410,7 +411,7 @@ span.text-indent {
   overflow: hidden;
   box-sizing: border-box;
   height: 500px;
-  padding-top: 20px;
+  padding-top: 55px;
   border-bottom: 1px solid #ebebeb;
   background: white;
   .content {
@@ -418,8 +419,10 @@ span.text-indent {
     width: 100%;
     height: 100%;
     li:nth-child(1) article img {
-      left: -30px;
-      opacity: 0.2;
+      left: 50%;
+      top: 70%;
+      height: 230px;
+      min-width: 0;
     }
     article {
       position: absolute;
@@ -445,7 +448,7 @@ span.text-indent {
       }
     }
     .s-menu {
-      margin-top: 120px;
+      margin-top: 110px;
     }
     .btn-start {
       margin-top: 70px;
@@ -500,7 +503,12 @@ span.text-indent {
         box-sizing: border-box;
         overflow: hidden;
         width: 50%;
+        display: none;
         height: 450px;
+        &:nth-of-type(1),
+        &:nth-of-type(2) {
+          display: block;
+        }
         div {
           position: absolute;
           z-index: 1;
