--- a/leeyerin1/include/sub_header.html
+++ b/leeyerin1/include/sub_header.html
@@ -17,16 +17,6 @@
         </ul>
       </li>
       <li>
-        <a href="#">가이드 라인</a>
-        <ul class="sub">
-          <div>
-            <li><a href="guideline_product.html">제품 사용 가이드</a></li>
-            <li><a href="#">비타민C 가이드</a></li>
-            <li><a href="#">파운데이션 가이드</a></li>
-          </div>
-        </ul>
-      </li>
-      <li>
         <a href="#">제품소개</a>
         <ul class="sub">
           <div>
@@ -50,6 +40,17 @@
           </div>
         </ul>
       </li>
+      <li>
+        <a href="#">가이드 라인</a>
+        <ul class="sub">
+          <div>
+            <li><a href="guideline_product.html">제품 사용 가이드</a></li>
+            <li><a href="#">비타민C 가이드</a></li>
+            <li><a href="#">파운데이션 가이드</a></li>
+          </div>
+        </ul>
+      </li>
+      <li class="gnb-mobile"><a href="member_login.html">로그인</a></li>
     </ul>
   </nav>
   <ul id="right-util">
