--- a/leeyerin1/scss/_common.scss
+++ b/leeyerin1/scss/_common.scss
@@ -16,8 +16,10 @@
     top: 0;
   }
 }
-
 .section {
+  overflow: hidden;
+  box-sizing: border-box;
+  background: white;
   h1 {
     margin-top: 20px;
   }
@@ -28,25 +30,6 @@
     margin: 0 auto;
   }
 }
-
-.section-banner {
-  font: 20px 'Montserrat', sans-serif;
-  font-weight: 500;
-  overflow: hidden;
-  transition: .6s;
-  text-align: center;
-  text-transform: uppercase;
-  color: white;
-  background: rgba(167, 167, 167, .66);
-  &:hover {
-    background: rgba(95, 95, 95, .65);
-  }
-  .button-area {
-    margin-top: 50px;
-    text-align: center;
-  }
-}
-
 .s-menu {
   font: 16px 'Montserrat', sans-serif;
   font-weight: 600;
@@ -74,7 +57,7 @@
   text-transform: uppercase;
   color: #ce995c;
   border: 2px solid #ce995c;
-  background: rgba(255, 255, 255, .8);
+  background: white;
 }
 
 .btn-item {
@@ -87,37 +70,6 @@
   &:hover {
     border-color: #ce995c;
     background: #ce995c;
-  }
-}
-
-.top-banner-close {
-  position: absolute;
-  top: 120px;
-  right: 30px;
-  display: block;
-  overflow: hidden;
-  width: 70px;
-  height: 70px;
-}
-
-.css-cancel {
-  position: relative;
-  display: block;
-  width: 2px;
-  height: 50px;
-  margin: 10px 0 0 33px;
-  transform: rotate(45deg);
-  background: white;
-  :before {
-    position: absolute;
-    top: 50%;
-    left: -23px;
-    display: block;
-    width: 50px;
-    height: 2px;
-    margin-top: -2px;
-    content: '';
-    background: white;
   }
 }
 
@@ -153,6 +105,91 @@ span.text-indent {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+    }
+  }
+}
+@media screen and (max-width: 850px) {
+  .section {
+    .content {
+      width: 100%;
+    }
+  }
+  .s-menu {
+    text-align: center;
+  }
+  .m-menu {
+    font-size: 30px;
+    text-align: center;
+  }
+  //only mobile btn
+  .more-btn, .mobile-menu {
+    display: block;
+  }
+  div.more-btn {
+    margin: 30px auto 0;
+    a.more-btn {
+      display: block;
+      border: 1px solid #444;
+      box-sizing: border-box;
+      color: #444;
+      font-weight: bold;
+      height: 40px;
+      line-height: 40px;
+      font-size: 11px;
+      text-align: center;
+      width: 150px;
+      border-radius: 30px;
+      letter-spacing: 2px;
+      margin: 0 auto;
+    }
+  }
+  .mobile-menu {
+    float: left;
+    overflow: hidden;
+    width: 24px;
+    height: 24px;
+    margin-top: 5px;
+    transition: .4s;
+    span {
+      position: relative;
+      display: block;
+      width: 50px;
+      height: 3px;
+      margin: 0 0 0 0;
+      background: black;
+      &:nth-child(2) {
+        display: block;
+        width: 20px;
+        height: 3px;
+        margin: 6px 0 0 0;
+        background: black;
+      }
+      &:nth-child(3) {
+        display: block;
+        width: 50px;
+        height: 3px;
+        margin: 5px 0 0 0;
+        background: black;
+      }
+    }
+  }
+  #header.m-open .mobile-menu span {
+    &:nth-child(1) {
+      transform: rotate(45deg);
+      margin: 16px 0 0 -7px;
+      background: white;
+    }
+    &:nth-child(2) {
+      margin: -8px 0 0 0;
+      opacity: 0;
+    }
+    &:nth-child(3) {
+      display: block;
+      width: 50px;
+      height: 3px;
+      margin: -9px 0 0 -7px;
+      transform: rotate(-45deg);
+      background: white;
     }
   }
 }
