--- a/leeyerin1/scss/_imgslide.scss
+++ b/leeyerin1/scss/_imgslide.scss
@@ -1,72 +1,215 @@
-.img-slide {
-  .content ul.slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    li {
+@media screen and (min-width: 851px) {
+  .img-slide {
+    .content ul.slide {
       position: absolute;
       top: 0;
       left: 0;
-      display: none;
+      overflow: hidden;
       width: 100%;
       height: 100%;
-      &:first-child {
-        display: block;
-      }
-      article {
-        display: block;
-      }
-    }
-  }
-  ul.indicator {
-    position: absolute;
-    bottom: 15px;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    li {
-      display: none;
-      margin: 0 2px;
-      a {
-        display: block;
-        overflow: hidden;
-        width: 10px;
-        height: 10px;
-        border: 3px solid white;
-        border-radius: 50%;
-        box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
-      }
-      &.on a {
-        border-color: #ce995c;
-        background: #4bc1d2;
-      }
-    }
-  }
-  p.control {
-    a {
-      &.prev {
+      li {
         position: absolute;
-        bottom: 25px;
-        left: 30px;
-      }
-      &.next {
-        position: absolute;
-        bottom: 25px;
-        left: 75px;
-      }
-      &.play {
-        font-size: 18px;
-        position: absolute;
-        right: 20px;
-        bottom: 35px;
-        color: white;
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
-        span {
-          margin-left: -99999px;
+        top: 0;
+        left: 0;
+        display: none;
+        width: 100%;
+        height: 100%;
+        &:first-child {
+          display: block;
         }
+        article {
+          display: block;
+        }
+      }
+    }
+    ul.indicator {
+      position: absolute;
+      bottom: 15px;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      li {
+        display: none;
+        margin: 0 2px;
+        a {
+          display: block;
+          overflow: hidden;
+          width: 10px;
+          height: 10px;
+          border: 3px solid white;
+          border-radius: 50%;
+          box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
+        }
+        &.on a {
+          border-color: #ce995c;
+          background: #4bc1d2;
+        }
+      }
+    }
+    div.control {
+      font-size: 11px;
+      letter-spacing: -1px;
+      a.prev,
+      a.next {
+        border-radius: 30px;
+        position: absolute;
+        bottom: 20px;
+        transform: translate(0, -50%);
+        width: 70px;
+        height: 20px;
+        overflow: hidden;
+        display: block;
+        transition: .4s;
+        border: 1px solid rgba(0, 0, 0, 0.5);
+        background: rgba(255, 255, 255, 0.3);
+        span {
+          width: 50%;
+          float: left;
+          overflow: hidden;
+        }
+        &:hover,
+        &:focus {
+          background: white;
+          border: 1px solid #222;
+          transition: .4s;
+        }
+      }
+      a.prev {
+        left: 20px;
+        padding: 5px 2px 0 10px;
+        span {
+          img {
+            margin-top: -2px;
+          }
+        }
+      }
+      a.next {
+        right: 20px;
+        padding: 5px 2px 0 10px;
+        span {
+          img {
+            margin: -2px 0 0 -35px;
+          }
+        }
+      }
+      a.play {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 0);
+        bottom: 33px;
+        padding: 5px 25px;
+        background: rgba(255, 255, 255, 0.3);
+        border: 1px solid rgba(0, 0, 0, 0.5);
+        border-radius: 30px;
+        transition: .4s;
+        &:hover,
+        &:focus {
+          background: white;
+          border: 1px solid #222;
+          transition: .4s;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 850px) {
+  .img-slide {
+    .content ul.slide {
+      position: absolute;
+      top: 0;
+      left: 0;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      li {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: none;
+        width: 100%;
+        height: 100%;
+        &:first-child {
+          display: block;
+        }
+        article {
+          display: block;
+        }
+      }
+    }
+    ul.indicator {
+      position: absolute;
+      bottom: 15px;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      li {
+        display: none;
+        margin: 0 2px;
+        a {
+          display: block;
+          overflow: hidden;
+          width: 10px;
+          height: 10px;
+          border: 3px solid white;
+          border-radius: 50%;
+          box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
+        }
+        &.on a {
+          border-color: #ce995c;
+          background: #4bc1d2;
+        }
+      }
+    }
+    div.control {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 40px;
+      background: rgba(68, 68, 68, 0.4);
+      color: white;
+      left: 0;
+      font-size: 11px;
+      letter-spacing: -1px;
+      a.prev,
+      a.next {
+        border-radius: 30px;
+        position: absolute;
+        bottom: 5px;
+        width: 70px;
+        height: 20px;
+        overflow: hidden;
+        display: block;
+        transition: .4s;
+        border: 1px solid transparent;
+        span {
+          width: 50%;
+          float: left;
+          overflow: hidden;
+        }
+      }
+      a.prev {
+        left: 20px;
+        padding: 5px 2px 0 10px;
+        span {
+          img {
+            margin-top: -21px;
+          }
+        }
+      }
+      a.next {
+        right: 20px;
+        padding: 5px 2px 0 10px;
+        span {
+          img {
+            margin: -21px 0 0 -35px;
+          }
+        }
+      }
+      a.play {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 0);
+        bottom: 10px;
       }
     }
   }
