--- a/leeyerin1/scss/_m_footer.scss
+++ b/leeyerin1/scss/_m_footer.scss
@@ -9,23 +9,29 @@
     box-sizing: border-box;
     border-bottom: 1px solid #e1e1e1;
     .content {
+      position: relative;
       overflow: hidden;
-      width: 1200px;
+      width: 100%;
       margin: 50px auto;
       .site-num {
-        float: left;
         box-sizing: border-box;
+        text-align: center;
+        margin-bottom: 40px;
         span {
           display: block;
           &.tel {
             font: 25px 'Montserrat', sans-serif;
             font-weight: 600;
             margin-bottom: 10px;
+            padding-top: 30px;
             &:before {
               display: block;
               width: 30px;
               height: 3px;
-              margin-bottom: 10px;
+              position: absolute;
+              top: 0;
+              left: 50%;
+              transform: translate(-50%, 0);
               content: '';
               background: black;
             }
@@ -33,33 +39,32 @@
         }
       }
       nav {
-        float: right;
         overflow: hidden;
         box-sizing: border-box;
-        width: 600px;
+        max-width: 600px;
+        margin: 0 auto;
         ul {
-          float: right;
           overflow: hidden;
-          text-align: right;
-          li {
-            float: left;
-            box-sizing: border-box;
-            width: 200px;
-            height: 60%;
-            h5 {
-              font: 14px 'Montserrat', sans-serif;
-              font-weight: 600;
-              margin-bottom: 10px;
-              text-transform: uppercase;
-            }
-            li a {
-              font-size: 14px;
-              &:focus,
-              &:hover {
-                text-decoration: underline;
-              }
+          text-align: center;
+          h5 {
+            font: 14px 'Montserrat', sans-serif;
+            font-weight: 600;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+          }
+          li a {
+            font-size: 14px;
+            &:focus,
+            &:hover {
+              text-decoration: underline;
             }
           }
+        }
+        >ul>li {
+          float: left;
+          box-sizing: border-box;
+          width: 33.333333%;
+          height: 60%;
         }
       }
     }
@@ -67,10 +72,12 @@
   #copyright {
     font-size: 12px;
     overflow: hidden;
-    width: 1200px;
-    margin: 20px auto;
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
     ul {
-      margin-bottom: 10px;
+      margin: 10px;
+      text-align: center;
       li {
         display: inline-block;
         a {
@@ -87,9 +94,9 @@
       }
     }
     dl {
-      display: inline-block;
+      display: iblock;
       overflow: hidden;
-      margin-right: 10px;
+      text-align: center;
       dt,
       dd {
         display: inline-block;
@@ -101,6 +108,8 @@
     p {
       font-weight: bold;
       color: #444;
+      margin: 20px 0;
+      text-align: center;
     }
   }
   a:focus,
