--- a/leeyerin1/scss/_m_sub_section.scss
+++ b/leeyerin1/scss/_m_sub_section.scss
@@ -1,18 +1,21 @@
+//m_sub common
+p {
+  color: #777;
+}
 //setcion01
 #section01 {
-  height: 245px;
-  margin-top: 90px;
+  height: 195px;
+  margin-top: 55px;
   background: url('../img/body-bg01.jpg') center center no-repeat;
   background-size: cover;
   .content {
-    width: 100%;
     text-align: center;
     color: white;
     height: 100%;
     background: rgba(167, 167, 167, .66);
     h2 {
-      margin: 90px auto 0;
-      font-size: 25px;
+      margin: 80px auto 0;
+      font-size: 20px;
     }
     li {
       display: inline-block;
@@ -26,21 +29,21 @@
   border-bottom: 1px solid #ebebeb;
   .content {
     position: relative;
-    max-width: 1200px;
+    width: 100%;
+    padding-left: 20px;
     nav {
+      overflow: hidden;
+    }
+    ul {
       overflow: hidden;
     }
     li {
       display: inline-block;
+      overflow: hidden;
       a {
         padding: 5px;
         font-size: 14px;
         line-height: 60px;
-        &:focus,
-        &:hover {
-          text-decoration: underline;
-          color: #777;
-        }
       }
     }
     li+li:before {
@@ -48,23 +51,23 @@
       font-size: 13px;
       display: inline-block;
       padding: 0 5px;
-      font-weight: bold;
       content: '\f105';
     }
   }
 }
-
 //section03 common
 #section03 {
+  padding: 0 20px;
+  box-sizing: border-box;
   .content {
-    margin: 50px auto 100px;
+    margin: 50px auto;
   }
 }
 
 //section03.company
 #section03.company {
   .content > div {
-    height: 500px;
+    height: 230px;
     overflow: hidden;
     position: relative;
     box-sizing: border-box;
@@ -76,37 +79,39 @@
   }
   .founder-text {
     position: absolute;
-    top: 50%;
+    width: 80%;
+    top: 50px;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
     background: white;
-    padding: 70px 50px;
+    padding: 20px;
     text-align: center;
+    box-sizing: border-box;
   }
   article {
     width: 100%;
-    height: 350px;
     overflow: hidden;
-    margin-top: 50px;
+    &:first-of-type {
+      margin-top: 50px;
+      p {
+        padding-bottom: 0;
+      }
+    }
     div {
-      width: 50%;
-      height: 100%;
+      box-sizing: border-box;
       overflow: hidden;
-      float: left;
       img {
-        max-width: 100%;
-        min-height: 100%;
+        width: 100%;
+        min-height: 200px;
+        overflow: hidden;
       }
     }
     p {
-      width: 50%;
-      height: 350px;
-      padding: 0 30px;
+      padding: 20px 0;
       box-sizing: border-box;
       background: white;
       text-align: justify;
-      float: left;
-      font-size: 16px;
+      font-size: 13px;
       vertical-align: bottom;
       overflow: hidden;
       &:before {
@@ -131,6 +136,7 @@
 
 //section03.vitamin
 #section03.vitamin {
+  padding: 0 10px;
   .content {
     text-align: center;
     > div {
@@ -183,7 +189,7 @@
       overflow: hidden;
       li {
         float: left;
-        width: 33.333333%;
+        width: 50%;
         padding: 20px;
         box-sizing: border-box;
         overflow: hidden;
@@ -255,47 +261,42 @@
 
 //section03.faq
 #section03.faq {
+  .content {
+    margin-bottom: 100px;
+  }
   .search-box {
     margin: 0 auto;
     text-align: center;
     input {
       border: none;
-      width: 500px;
+      width: 230px;
       height: 55px;
       border-bottom: 2px solid black;
       box-sizing: border-box;
-      padding: 0 15px;
-      font-size: 23px;
+      padding-left: 15px;
+      font-size: 20px;
     }
     .fa-search {
-      font-size: 35px;
+      font-size: 25px;
       margin: 0 10px;
       vertical-align: middle;
     }
   }
   .faq-menu {
-    height: 62px;
-    margin: 70px 0 30px;
+    margin: 50px auto 0;
+    padding: 0 5% 50px 5%;
+    overflow: hidden;
     border-bottom: 2px solid #222;
     li {
-      background: white;
-      cursor: pointer;
       float: left;
-      width: 185px;
+      width: 50%;
+      border-bottom: 2px solid #ddd;
+      box-sizing: border-box;
+      line-height: 50px;
       text-align: center;
-      font-size: 16px;
-      height: 60px;
-      line-height: 60px;
-      border: 1px solid #ddd;
-      border-bottom: none;
-      border-left-width: 0;
-      &:first-child {
-        border-left-width: 1px;
-      }
+      font-size: 14px;
       &.on {
-        border: 2px solid #222;
-        border-bottom: none;
-        height: 62px;
+        border-bottom: 2px solid #222;
       }
     }
   }
@@ -307,7 +308,7 @@
     label {
       display: block;
       position: relative;
-      padding: 20px 30px;
+      padding: 20px 50px 20px 20px;
       line-height: 20px;
       border-bottom: 1px solid #ddd;
       &.shopping:before,
@@ -362,22 +363,24 @@
       margin: 25px auto;
     }
     h6 {
-      font-size: 14px;
+      font-size: 13px;
       font-weight: normal;
     }
   }
 }
-//section03.login
+
+//section03 login
 #section03.login {
   .all-wrapper {
     overflow: hidden;
-    width: 720px;
-    margin: 55px auto 20px;
+    width: 100%;
+    margin: 40px auto 20px;
     .login-wrapper {
       overflow: hidden;
-      width: 350px;
-      float: left;
+      max-width: 350px;
+      margin: 0 auto;
       .tab {
+        width: 100%;
         overflow: hidden;
         li {
           width: 50%;
@@ -387,15 +390,15 @@
           border-bottom: 3px solid #bbb;
           color: #bbb;
           &.block {
-            border-bottom-color: #444;
-            color: #444;
+            border-bottom-color: #222;
+            color: #222;
           }
         }
       }
       .form-tab {
-        width: 350px;
-        float: left;
+        width: 100%;
         overflow: hidden;
+        margin: 0 auto;
         display: none;
         &.on {
           display: block;
@@ -429,6 +432,7 @@
           }
         }
         .login-save {
+          color: #222;
           text-align: right;
           font-size: 14px;
           margin: 14px auto;
@@ -441,14 +445,10 @@
             width: 100%;
             height: 55px;
             border: none;
-            background: #444;
+            background: #222;
             color: white;
             transition: .4s;
             font-weight: bold;
-            &:focus,
-            &:hover {
-              background: #ce995c;
-            }
           }
           ul {
             overflow: hidden;
@@ -456,10 +456,8 @@
             margin-top: 25px;
             li {
               display: inline-block;
-              padding: 2px 3px;
               a {
-                &:focus,
-                &:hover {
+                &:focus {
                   text-decoration: underline;
                 }
               }
@@ -477,9 +475,8 @@
       }
     }
     ul.login-sns {
-      width: 330px;
-      margin: 35px 0 0 40px;
-      float: left;
+      max-width: 350px;
+      margin: 60px auto 0;
       text-transform: uppercase;
       li {
         position: relative;
@@ -491,8 +488,7 @@
         text-align: right;
         a {
           transition: .4s;
-          &:focus,
-          &:hover {
+          &:focus {
             letter-spacing: 1px;
             text-decoration: underline;
           }
@@ -528,8 +524,8 @@
 //#section03.join
 #section03.join {
   .join-guide {
-    width: 550px;
-    margin: 60px auto 0;
+    max-width: 450px;
+    margin: 50px auto 0;
     overflow: hidden;
     li {
       float: left;
@@ -537,8 +533,8 @@
       overflow: hidden;
       div {
         position: relative;
-        width: 100px;
-        height: 130px;
+        width: 80px;
+        height: 120px;
         overflow: hidden;
         margin: 0 auto;
         span {
@@ -547,17 +543,17 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100px;
+            height: 85px;
             overflow: hidden;
           }
           &:nth-child(2) {
             position: absolute;
             bottom: 0;
-            left: 20px;
+            left: 12px;
           }
           img {
-            width: 330px;
-            margin: -15px 0 0 -14px;
+            width: 279px;
+            margin: -13px 0 0 -12px;
           }
         }
       }
@@ -566,7 +562,7 @@
           color: #777;
         }
         img {
-          margin: -121px 0 0 -117px;
+          margin: -102px 0 0 -99px;
         }
       }
       &:nth-child(3) {
@@ -574,14 +570,14 @@
           color: #777;
         }
         img {
-          margin: -121px 0 0 -220px;
+          margin: -102px 0 0 -186px;
         }
       }
     }
   }
   table {
-    width: 95%;
-    margin: 70px auto 30px;
+    width: 100%;
+    margin: 50px auto 30px;
     border-top: 3px solid black;
     text-align: left;
     tr {
@@ -592,7 +588,7 @@
       padding: 10px 0;
     }
     th {
-      padding-left: 20px;
+      padding: 15px;
       font-weight: normal;
       width: 30%;
       text-align: left;
@@ -604,27 +600,28 @@
         color: red;
       }
     }
+    td .btn {display: none;}
     input:not([type="checkbox"]),
     select {
       display: inline-block;
-      width: 230px;
+      width: 90%;
       height: 40px;
       box-sizing: border-box;
       padding-left: 10px;
       border: 1px solid #e0e0e0;
-      font-size: 14px;
+      font-size: 13px;
       font-family: inherit;
       vertical-align: middle;
       transition: all 0.3s;
-      margin-right: 25px;
+      //margin-right: 25px;
     }
     .phone-num,
     input.phone-num {
-      width: 100px;
-      margin-right: 20px;
+     width: 30%;
+      margin-right: 0px;
     }
     label {
-      margin-right: 50px;
+      font-size: 13px;
     }
   }
   input[type="checkbox"] {
@@ -633,6 +630,7 @@
     margin-right: 10px;
   }
   .terms-box {
+    font-size: 13px;
     text-align: left;
     width: 95%;
     margin: 0 auto;
@@ -643,7 +641,6 @@
       overflow: hidden;
       a {
         float: right;
-        font-size: 14px;
         text-decoration: underline;
         &:focus,
         &:hover {
@@ -659,10 +656,9 @@
     margin-top: 50px;
     li {
       display: inline-block;
-      margin: 0 5px;
     }
     input {
-      width: 170px;
+      width: 130px;
       height: 50px;
       &[type="reset"] {
         background: white;
@@ -684,10 +680,6 @@
     color: white;
     font-weight: bold;
     transition: .4s;
-    &:focus,
-    &:hover {
-      background: #ce995c;
-    }
   }
 }
 
@@ -698,27 +690,27 @@
     text-align: center;
     input {
       border: none;
-      width: 500px;
+      width: 230px;
       height: 55px;
       border-bottom: 2px solid black;
       box-sizing: border-box;
-      padding: 0 15px;
-      font-size: 23px;
+      padding-left: 15px;
+      font-size: 20px;
     }
     .fa-search {
-      font-size: 35px;
+      font-size: 25px;
       margin: 0 10px;
       vertical-align: middle;
     }
   }
   p {
-    font-size: 30px;
-    margin: 100px 0 0;
+    font-size: 20px;
+    margin: 60px 0 0;
     text-align: center;
   }
   ul {
     background: #f1f1f1;
-    padding: 40px 70px;
+    padding: 20px 40px;
     margin: 50px 0 30px;
     li {
       line-height: 1.8;
@@ -746,17 +738,13 @@
     overflow: hidden;
     h5 {
       display: inline-block;
-      font-size: 25px;
-      position: relative;
-      left: 50%;
-      top: 0;
-      transform: translate(-50%, 0);
+      font-size: 20px;
       font-weight: normal;
       letter-spacing: 1px;
     }
     select {
-      width: 140px;
-      height: 35px;
+      width: 120px;
+      height: 30px;
       float: right;
       padding: 0 10px;
     }
@@ -767,11 +755,10 @@
     overflow: hidden;
     .store-img {
       position: relative;
-      width: 30%;
       height: 200px;
-      float: left;
       overflow: hidden;
       transition: .6s;
+      text-align: center;
       a {
         z-index: 1;
         transition: .4s;
@@ -799,7 +786,7 @@
         }
       }
       img {
-        min-width: 100%;
+        position: relative;
         height: 100%;
         transition: .4s;
       }
@@ -810,15 +797,14 @@
       }
     }
     article {
-      width: 70%;
-      float: left;
+      text-align: center;
       overflow: hidden;
-      padding: 0 60px;
       box-sizing: border-box;
       h5 {
         display: inline-block;
-        font-size: 23px;
-        margin: 0 15px 15px 0;
+        font-size: 20px;
+        margin: 15px;
+        margin-left: 0;
         letter-spacing: -1px;
       }
       .fa-map-marker {
@@ -854,9 +840,11 @@
   text-align: center;
   box-sizing: border-box;
   overflow: hidden;
-  padding: 50px;
+  padding: 30px;
+  padding-top: 70px;
   color: white;
   img {
+    width: 100%;
     display: block;
     margin: 0 auto;
   }
@@ -912,6 +900,18 @@
     li {
       list-style: disc;
       line-height: 2;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #section03.vitamin {
+    .content {
+      > ul {
+        li {
+          width: 100%;
+        }
+      }
     }
   }
 }
