--- a/leeyerin1/scss/m_sub.scss
+++ b/leeyerin1/scss/m_sub.scss
@@ -1,938 +1,10 @@
 @charset "UTF-8";
 body {
   font: 15px 'Open Sans', 'Noto Sans KR', '맑은 고딕', sans-serif;
-  background: url(../img/body-bg01.jpg) no-repeat center bottom fixed;
-  background-size: cover;
 }
 
-
-//reset
-body {
-  margin: 0;
-}
-
-article,
-aside,
-footer,
-header,
-nav,
-section {
-  display: block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-ul,
-ol,
-li,
-dl,
-dt,
-dd,
-p,
-table {
-  margin: 0;
-  padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: bold;
-}
-
-ul,
-ol,
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-img {
-  border: 0;
-}
-
-address,
-em,
-i {
-  font-style: normal;
-}
-
-table {
-  border-collapse: collapse;
-  caption {
-    overflow: hidden;
-    width: 0;
-    height: 0;
-  }
-}
-
-#wrapper {
-  overflow: hidden;
-  min-width: 320px;
-}
-
-//common
-#skip-nav {
-  font-size: 16px;
-  line-height: 40px;
-  position: fixed;
-  z-index: 100000;
-  top: -41px;
-  left: 0;
-  width: 100%;
-  transition: .4s;
-  text-align: center;
-  color: white;
-  border-bottom: 1px solid #e0e0e0;
-  background: rgba(0, 0, 0, .6);
-  &:focus {
-    top: 0;
-  }
-}
-
-.section {
-  h1 {
-    margin-top: 20px;
-  }
-  .content {
-    overflow: hidden;
-    box-sizing: border-box;
-    width: 100%;
-    margin: 0 auto;
-  }
-}
-
-.section-banner {
-  font: 20px 'Montserrat', sans-serif;
-  font-weight: 500;
-  overflow: hidden;
-  transition: .6s;
-  text-align: center;
-  text-transform: uppercase;
-  color: white;
-  background: rgba(167, 167, 167, .66);
-  .button-area {
-    margin-top: 50px;
-    text-align: center;
-  }
-}
-
-.s-menu {
-  font: 16px 'Montserrat', sans-serif;
-  font-weight: 600;
-  word-spacing: 2px;
-  text-transform: uppercase;
-  color: #ce995c;
-  text-align: center;
-}
-
-.m-menu {
-  font: 30px 'Montserrat', sans-serif;
-  font-weight: 600;
-  letter-spacing: -1.5px;
-  color: #222;
-  text-align: center;
-}
-
-.btn {
-  font: 14px 'Montserrat', sans-serif;
-  font-weight: 500;
-  display: block;
-  width: 90px;
-  padding: 10px 20px;
-  transition: .4s;
-  text-align: center;
-  letter-spacing: -1px;
-  text-transform: uppercase;
-  color: #ce995c;
-  border: 2px solid #ce995c;
-  background: rgba(255, 255, 255, .8);
-}
-
-.btn-item {
-  width: 100px;
-  margin: 0 auto;
-  color: white;
-  border-color: white;
-  background: rgba(255, 255, 255, 0);
-  &:focus,
-  &:hover {
-    border-color: #ce995c;
-    background: #ce995c;
-  }
-}
-
-.top-banner-close {
-  position: absolute;
-  top: 70px;
-  right: 0;
-  display: block;
-  overflow: hidden;
-  width: 70px;
-  height: 70px;
-}
-
-.css-cancel {
-  position: relative;
-  display: block;
-  width: 2px;
-  height: 50px;
-  margin: 10px 0 0 33px;
-  transform: rotate(45deg);
-  background: white;
-  :before {
-    position: absolute;
-    top: 50%;
-    left: -23px;
-    display: block;
-    width: 50px;
-    height: 2px;
-    margin-top: -2px;
-    content: '';
-    background: white;
-  }
-}
-
-span.text-indent {
-  display: inline-block;
-  text-indent: -999px;
-}
-
-#fix-box {
-  display: none;
-  overflow: hidden;
-  a.fix-scroll-btn {
-    position: fixed;
-    z-index: 10000;
-    right: 15px;
-    bottom: 103px;
-    overflow: hidden;
-    width: 40px;
-    height: 40px;
-    transition: .4s;
-    color: rgba(255, 255, 255, .9);
-    border-radius: 100px;
-    background: #777;
-    &:focus,
-    &:hover {
-      background: #ce995c;
-    }
-    &.down-btn {
-      bottom: 60px;
-    }
-    i {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-}
-
-//header
-#header {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  box-sizing: border-box;
-  width: 100%;
-  height: 65px;
-  border-bottom: 1px solid #ebebeb;
-  background: white;
-  &.m-open {
-    height: 100%;
-    border-bottom: none;
-    &:before {
-      width: 100%;
-      height: 100%;
-      content: '';
-      background: black;
-      position: fixed;
-    }
-    #logo-item,
-    #right-util {
-      display: none;
-    }
-    nav {
-      display: block;
-    }
-  }
-  #header-wrapper {
-    position: relative;
-    overflow: hidden;
-    box-sizing: border-box;
-    width: 100%;
-    min-width: 320px;
-    height: 100%;
-    padding: 15px 20px;
-  }
-  #logo-item {
-    display: block;
-    font: 25px 'Open Sans', sans-serif;
-    font-weight: 700;
-    position: relative;
-    letter-spacing: -1.5px;
-    color: #222;
-    float: left;
-    margin-left: 20px;
-    span {
-      font-weight: 400;
-      transition: .4s;
-    }
-  } //gnb-menu
-  nav {
-    display: none;
-    box-sizing: border-box;
-    overflow: hidden;
-    #gnb {
-      overflow: hidden;
-      position: fixed;
-      top: 120px;
-      left: 0;
-      width: 100%;
-      text-align: center;
-      color: white;
-      >li {
-        float: left;
-        width: 25%;
-        letter-spacing: 1px;
-        >a {
-          font-weight: 600;
-          transition: .4s;
-          color: #ce995c;
-        }
-      }
-      .sub {
-        line-height: 2;
-        overflow: hidden;
-        margin: 18px 0 24px;
-        div {
-          overflow: hidden;
-          box-sizing: border-box;
-          >li {
-            transition: transform .5s;
-            >a {
-              font-size: 14px;
-              transition: .4s;
-              &:focus,
-              &:hover {
-                color: #ce995c;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-//right-util menu
-#right-util {
-  float: right;
-  overflow: hidden;
-  transition: .4s;
-  margin-top: 6px;
-  li {
-    float: left;
-    &:nth-of-type(2) a:after {
-      display: inline-block;
-      width: 2px;
-      height: 10px;
-      margin-left: 35px;
-      content: '';
-      background: #ddd;
-    }
-    &:nth-child(1),
-    &:nth-child(2) {
-      display: none;
-    }
-    &:nth-child(4) a {
-      margin-left: 35px;
-    }
-    a {
-      transition: .4s;
-      &:focus,
-      &:hover {
-        color: #ce995c;
-      }
-    }
-  }
-  .text {
-    font-size: 14px;
-    font-weight: 600;
-    color: #444;
-  }
-  .fa-search,
-  .fa-map-marker {
-    font-size: 22px;
-  }
-}
-//setcion01
-#section01 {
-  overflow: hidden;
-  box-sizing: border-box;
-  height: 335px;
-  padding-top: 90px;
-  .content {
-    margin: 80px auto;
-    h2 {
-      margin-top: 15px;
-    }
-    ul li {
-      display: inline-block;
-    }
-  }
-}
-
-//setcion02
-#section02 {
-  overflow: hidden;
-  box-sizing: border-box;
-  height: 60px;
-  border-bottom: 1px solid #ebebeb;
-  background: white;
-  .content {
-    position: relative;
-    max-width: 1200px;
-    #sub-info {
-      overflow: hidden;
-      ul {
-        overflow: hidden;
-        li {
-          display: inline-block;
-          overflow: hidden;
-          a {
-            padding: 5px;
-            font-size: 14px;
-            line-height: 60px;
-            &.hover {
-              text-decoration: underline;
-              color: #777;
-            }
-          }
-        }
-      }
-      li+li:before {
-        font-family: FontAwesome;
-        font-size: 13px;
-        display: inline-block;
-        padding: 0 5px;
-        content: '\f105';
-      }
-    }
-  }
-}
-//section03
-#section03 {
-  &.section {
-    background: white;
-    overflow: hidden;
-  }
-  .content {
-    margin: 50px auto 100px;
-    .founder-box {
-      height: 500px;
-      overflow: hidden;
-      position: relative;
-      box-sizing: border-box;
-      img {
-        width: 100%;
-        position: relative;
-        overflow: hidden;
-      }
-    }
-    .founder-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 70px 50px;
-      text-align: center;
-    }
-    article:not(.founder-box) {
-      width: 100%;
-      height: 350px;
-      overflow: hidden;
-      margin-top: 50px;
-      div {
-        width: 50%;
-        height: 100%;
-        overflow: hidden;
-        float: left;
-        img {
-          max-width: 100%;
-          min-height: 100%;
-        }
-      }
-      p {
-        width: 50%;
-        height: 350px;
-        padding: 0 30px;
-        box-sizing: border-box;
-        background: white;
-        text-align: justify;
-        float: left;
-        font-size: 16px;
-        vertical-align: bottom;
-        overflow: hidden;
-        &:before {
-          content: '';
-          display: inline-block;
-          padding-right: 10px;
-          margin-right: 5px;
-        }
-        span {
-          font-size: 25px;
-          color: black;
-          font-family: serif;
-          text-decoration: underline;
-          margin: 5px;
-        }
-        strong {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-}
-//section02
-#section02 .content #sub-info ul {
-  overflow: hidden;
-  padding: 0 20px;
-}
-//section03 login
-#section03.login {
-  .content {
-    text-align: center;
-    h3 {
-      margin: 25px auto;
-    }
-    h6 {
-      font-size: 13px;
-      font-weight: normal;
-    }
-    .align-box {
-      overflow: hidden;
-      width: 100%;
-      margin: 55px auto 20px;
-      .login-wrap {
-        overflow: hidden;
-        width: 350px;
-        margin: 0 auto;
-        .tab-box {
-          width: 350px;
-          overflow: hidden;
-          li {
-            width: 50%;
-            float: left;
-            line-height: 45px;
-            margin-bottom: 20px;
-            border-bottom: 3px solid #bbb;
-            color: #bbb;
-            &.black {
-              border-bottom-color: #222;
-              color: #222;
-            }
-          }
-        }
-        .form-tab {
-          width: 350px;
-          overflow: hidden;
-          margin: 0 auto;
-          display: none;
-          &.on {
-            display: block;
-          }
-          .login-box {
-            position: relative;
-            overflow: hidden;
-            label.login-label {
-              position: absolute;
-              top: 0;
-              left: 10px;
-              line-height: 55px;
-              &.on {
-                display: none;
-              }
-            }
-            input.login-form {
-              display: inline-block;
-              width: 100%;
-              height: 55px;
-              box-sizing: border-box;
-              padding: 0 10px;
-              border: 1px solid #e0e0e0;
-              font-size: 14px;
-              font-family: inherit;
-              vertical-align: middle;
-              transition: all 0.3s;
-              &.pw {
-                border-top: none;
-              }
-            }
-          }
-          .id-save {
-            text-align: right;
-            font-size: 14px;
-            margin: 14px auto;
-            label:first-of-type {
-              margin-right: 20px;
-            }
-          }
-          .btn-box {
-            .login-btn {
-              width: 100%;
-              height: 55px;
-              border: none;
-              background: #222;
-              color: white;
-              transition: .4s;
-              font-weight: bold;
-              &:focus,
-              &:hover {
-                background: #ce995c;
-              }
-            }
-          }
-          .login-link {
-            overflow: hidden;
-            font-size: 13px;
-            margin-top: 25px;
-            li {
-              display: inline-block;
-              padding: 2px 3px;
-              a {
-                &:focus,
-                &:hover {
-                  text-decoration: underline;
-                }
-              }
-            }
-            li+li:before {
-              content: '';
-              width: 2px;
-              height: 10px;
-              margin: 0 20px;
-              background: #ddd;
-              display: inline-block;
-            }
-          }
-        }
-      }
-      .sns-login-wrap {
-        width: 330px;
-        margin: 60px auto 0;
-        text-transform: uppercase;
-        li {
-          position: relative;
-          padding: 17px 30px 17px 15px;
-          box-sizing: border-box;
-          border: 1px solid #ddd;
-          margin-bottom: 10px;
-          font-size: 14px;
-          text-align: right;
-          a {
-            transition: .4s;
-            &:focus,
-            &:hover {
-              letter-spacing: 1px;
-              text-decoration: underline;
-            }
-          }
-          span {
-            position: absolute;
-            top: 2px;
-            left: 0;
-            width: 55px;
-            height: 50px;
-            margin-left: 25px;
-            color: white;
-            overflow: hidden;
-            img {
-              margin: 5px 5px 5px 8px;
-              height: 100%;
-            }
-          }
-          &:nth-of-type(2) img {
-            margin-left: -56px;
-          }
-          &:nth-of-type(3) img {
-            margin-left: -119px;
-          }
-          &:nth-of-type(4) img {
-            margin-left: -185px;
-          }
-        }
-      }
-    }
-  }
-}
-
-//footer
-#footer {
-  overflow: hidden;
-  box-sizing: border-box;
-  border-top: 1px solid #e1e1e1;
-  background: #f8f8f8;
-  #foot-menu {
-    overflow: hidden;
-    box-sizing: border-box;
-    border-bottom: 1px solid #e1e1e1;
-    .content {
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      margin: 50px auto;
-      .site-num {
-        box-sizing: border-box;
-        text-align: center;
-        margin-bottom: 40px;
-        span {
-          display: block;
-          &.tel {
-            font: 25px 'Montserrat', sans-serif;
-            font-weight: 600;
-            margin-bottom: 10px;
-            padding-top: 30px;
-            &:before {
-              display: block;
-              width: 30px;
-              height: 3px;
-              position: absolute;
-              top: 0;
-              left: 50%;
-              transform: translate(-50%, 0);
-              content: '';
-              background: black;
-            }
-          }
-        }
-      }
-      nav {
-        overflow: hidden;
-        box-sizing: border-box;
-        max-width: 600px;
-        margin: 0 auto;
-        ul {
-          overflow: hidden;
-          text-align: center;
-          h5 {
-            font: 14px 'Montserrat', sans-serif;
-            font-weight: 600;
-            margin-bottom: 10px;
-            text-transform: uppercase;
-          }
-          li a {
-            font-size: 14px;
-            &:focus,
-            &:hover {
-              text-decoration: underline;
-            }
-          }
-        }
-        >ul>li {
-          float: left;
-          box-sizing: border-box;
-          width: 33.333333%;
-          height: 60%;
-        }
-      }
-    }
-  }
-  #copyright {
-    font-size: 12px;
-    overflow: hidden;
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    ul {
-      margin: 10px;
-      text-align: center;
-      li {
-        display: inline-block;
-        a {
-          font-weight: bold;
-        }
-        &:first-child a:after {
-          display: inline-block;
-          width: 1px;
-          height: 10px;
-          margin: 0 10px;
-          content: '';
-          background: #bbb;
-        }
-      }
-    }
-    dl {
-      display: iblock;
-      overflow: hidden;
-      text-align: center;
-      dt,
-      dd {
-        display: inline-block;
-      }
-    }
-    span {
-      margin-left: 10px;
-    }
-    p {
-      font-weight: bold;
-      color: #444;
-      margin: 20px 0;
-      text-align: center;
-    }
-  }
-  a:focus,
-  a:hover {
-    text-decoration: underline;
-  }
-}
-
-//img-slide
-.img-slide {
-  .content ul.slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    li {
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: none;
-      width: 100%;
-      height: 100%;
-      &:first-child {
-        display: block;
-      }
-      article {
-        display: block;
-      }
-    }
-  }
-  ul.indicator {
-    position: absolute;
-    bottom: 15px;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    li {
-      display: none;
-      margin: 0 2px;
-      a {
-        display: block;
-        overflow: hidden;
-        width: 10px;
-        height: 10px;
-        border: 3px solid white;
-        border-radius: 50%;
-        box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .5);
-      }
-      &.on a {
-        border-color: #ce995c;
-        background: #4bc1d2;
-      }
-    }
-  }
-  p.control {
-    a {
-      &.prev {
-        position: absolute;
-        bottom: 25px;
-        left: 30px;
-      }
-      &.next {
-        position: absolute;
-        bottom: 25px;
-        left: 75px;
-      }
-      &.play {
-        font-size: 18px;
-        position: absolute;
-        right: 20px;
-        bottom: 35px;
-        color: white;
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
-        span {
-          margin-left: -99999px;
-        }
-      }
-    }
-  }
-}
-
-
-.mobile-menu {
-  float: left;
-  overflow: hidden;
-  width: 24px;
-  height: 24px;
-  margin-top: 7px;
-  transition: .4s;
-  span {
-    position: relative;
-    display: block;
-    width: 50px;
-    height: 3px;
-    margin: 0 0 0 0;
-    background: black;
-    &:nth-child(2) {
-      display: block;
-      width: 20px;
-      height: 3px;
-      margin: 6px 0 0 0;
-      background: black;
-    }
-    &:nth-child(3) {
-      display: block;
-      width: 50px;
-      height: 3px;
-      margin: 5px 0 0 0;
-      background: black;
-    }
-  }
-}
-@media screen and (max-width: 600px) {
-  #header nav #gnb {
-    top: 90px;
-    >li {
-      width: 50%;
-      margin-bottom: 40px;
-    }
-  }
-}
-#header.m-open .mobile-menu span {
-  &:nth-child(1) {
-    transform: rotate(45deg);
-    margin: 16px 0 0 -7px;
-    background: white;
-  }
-  &:nth-child(2) {
-    margin: -8px 0 0 0;
-    opacity: 0;
-  }
-  &:nth-child(3) {
-    display: block;
-    width: 50px;
-    height: 3px;
-    margin: -9px 0 0 -7px;
-    transform: rotate(-45deg);
-    background: white;
-  }
-}
+@import 'reset';
+@import 'common';
+@import 'm_header';
+@import 'm_sub_section';
+@import 'm_footer';
