--- a/leeyerin1/scss/sub.scss
+++ b/leeyerin1/scss/sub.scss
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 body {
   font: 15px 'Open Sans', 'Noto Sans KR', '맑은 고딕', sans-serif;
-  background: url(../img/body-bg01.jpg) no-repeat center bottom fixed;
-  background-size: cover;
 }
 
 @import 'reset';
@@ -20,18 +18,21 @@ body {
       margin-right: 20px;
     }
   }
-  #section02 .content article {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0 30px;
-    img {
-      min-width: 100%;
-      height: 100%;
+  #section02 .content {
+    article {
+      box-sizing: border-box;
+      width: 100%;
+      padding: 0 30px;
+      img {
+        min-width: 100%;
+        height: 100%;
+      }
     }
   }
   .section .content {
     width: 100%;
     transition: .4s;
+    padding: 0 20px;
     >h6,
     >h3 {
       padding: 0 30px;
@@ -43,5 +44,10 @@ body {
     box-sizing: border-box;
     width: 100%;
     padding: 0 30px;
+  }
+  #section03.join {
+    table {
+      width: 900px;
+    }
   }
 }
