html5 markup edit

--- a/leeyerin1/css/m_sub.css
+++ b/leeyerin1/css/m_sub.css
@@ -1196,7 +1196,7 @@ p
     background: transparent url(../img/arrow_down.png) no-repeat center;
 }
 
-#section03.faq .faq-article article
+#section03.faq .faq-article li div
 {
     overflow: hidden;
 
@@ -1210,7 +1210,7 @@ p
     display: none;
 }
 
-#section03.faq .faq-article input:checked ~ article
+#section03.faq .faq-article input:checked ~ div
 {
     font-size: 14px;
     line-height: 1.5;
