--- a/leeyerin1/scss/main.scss
+++ b/leeyerin1/scss/main.scss
@@ -44,7 +44,7 @@ body {
     padding: 30px 30px 50px;
     transition: .4s;
   }
-  #section05 .content dl {
+  #section05 .content li {
     width: 25%;
     .sns-wrap {
       width: calc(100% - 70px);
