--- a/leeyerin1/scss/_m_section.scss
+++ b/leeyerin1/scss/_m_section.scss
@@ -21,7 +21,7 @@ p {
     width: 100%;
     height: 100%;
   }
-  article {
+  .img-article {
     position: absolute;
     top: 0;
     left: 50%;
@@ -360,18 +360,13 @@ p {
     h3 {
       margin-bottom: 60px;
     }
-    dl {
+    li {
       float: left;
       overflow: hidden;
       box-sizing: border-box;
       width: 50%;
       margin-bottom: 25px;
-      .s-menu {
-        font-size: 14px;
-        color: #222;
-        margin-top: 20px;
-      }
-      dd {
+      p {
         font-size: 14px;
         margin-top: 15px;
         color: #777;
@@ -404,10 +399,19 @@ p {
           color: white;
         }
       }
+      .icon-wrap {
+        overflow: hidden;
+      }
       .sns-wrap {
         margin: 0 auto;
         box-sizing: border-box;
         padding: 0 15px;
+        .s-menu {
+          display: block;
+          font-size: 14px;
+          color: #222;
+          margin-top: 20px;
+        }
       }
     }
   }
