--- a/leeyerin1/scss/_section.scss
+++ b/leeyerin1/scss/_section.scss
@@ -21,7 +21,7 @@ p {
     width: 100%;
     height: 100%;
   }
-  article {
+  .img-article {
     position: absolute;
     top: 0;
     left: 50%;
@@ -350,23 +350,18 @@ p {
   h3 {
     margin-bottom: 50px;
   }
-  dl {
+  li {
     float: left;
     overflow: hidden;
     box-sizing: border-box;
     width: 300px;
-    .s-menu {
-      font-size: 14px;
-      color: #222;
-    }
-    dd {
+    p {
       font-size: 14px;
       margin-top: 15px;
       color: #777;
     }
     a {
       display: block;
-      float: left;
       width: 70px;
       height: 70px;
       transition: .4s;
@@ -390,11 +385,19 @@ p {
         color: white;
       }
     }
+    .icon-wrap {
+      overflow: hidden;
+      float: left;
+    } 
     .sns-wrap {
       float: left;
       box-sizing: border-box;
       width: 230px;
       padding: 0 15px;
+      .s-menu {
+        font-size: 14px;
+        color: #222;
+      }
     }
   }
 }
