footer scss mod

--- a/leeyerin1/scss/main.scss
+++ b/leeyerin1/scss/main.scss
@@ -1,4 +1,4 @@
-@charset 'utf-8';
+@charset 'UTF-8';
 body {
   font: 15px 'Open Sans', 'Noto Sans KR', '맑은 고딕', sans-serif;
   background: url(../img/body-bg.jpg) no-repeat center bottom fixed;
