--- a/leeyerin1/scss/_m_sub_section.scss
+++ b/leeyerin1/scss/_m_sub_section.scss
@@ -703,7 +703,8 @@ p {
       vertical-align: middle;
     }
   }
-  p {
+  h3 {
+    font-weight: normal;
     font-size: 20px;
     margin: 60px 0 0;
     text-align: center;
