--- a/leeyerin1/scss/_sub_section.scss
+++ b/leeyerin1/scss/_sub_section.scss
@@ -711,9 +711,10 @@
       vertical-align: middle;
     }
   }
-  p {
+  h3 {
     font-size: 30px;
     margin: 100px 0 0;
+    font-weight: normal;
     text-align: center;
   }
   ul {
