--- a/leeyerin1/scss/_m_sub_section.scss
+++ b/leeyerin1/scss/_m_sub_section.scss
@@ -66,7 +66,7 @@ p {
 
 //section03.company
 #section03.company {
-  .content > div {
+  .founder-wrap {
     height: 230px;
     overflow: hidden;
     position: relative;
@@ -88,7 +88,7 @@ p {
     text-align: center;
     box-sizing: border-box;
   }
-  article {
+  .company-wrap {
     width: 100%;
     overflow: hidden;
     &:first-of-type {
@@ -97,7 +97,7 @@ p {
         padding-bottom: 0;
       }
     }
-    div {
+    .company-img {
       box-sizing: border-box;
       overflow: hidden;
       img {
