--- a/leeyerin1/scss/_sub_section.scss
+++ b/leeyerin1/scss/_sub_section.scss
@@ -63,7 +63,7 @@
 
 //section03.company
 #section03.company {
-  .content > div {
+  .founder-wrap {
     height: 500px;
     overflow: hidden;
     position: relative;
@@ -83,12 +83,12 @@
     padding: 70px 50px;
     text-align: center;
   }
-  article {
+  .company-wrap {
     width: 100%;
     height: 350px;
     overflow: hidden;
     margin-top: 50px;
-    div {
+    .company-img {
       width: 50%;
       height: 100%;
       overflow: hidden;
