--- a/leeyerin1/scss/_m_sub_section.scss
+++ b/leeyerin1/scss/_m_sub_section.scss
@@ -87,15 +87,16 @@ p {
     padding: 20px;
     text-align: center;
     box-sizing: border-box;
+    &~.company-wrap {
+      margin-top: 50px;
+    }
   }
   .company-wrap {
     width: 100%;
     overflow: hidden;
-    &:first-of-type {
-      margin-top: 50px;
-      p {
-        padding-bottom: 0;
-      }
+    margin-top: 40px;
+    p {
+      padding-bottom: 0;
     }
     .company-img {
       box-sizing: border-box;
